--- a/ansible/sample-desktop-setup/wsl-packages.yml
+++ b/ansible/sample-desktop-setup/wsl-packages.yml
@@ -16,6 +16,6 @@ snaps:
           classic: false
 packages:
     installed: 
-        - ansible
+        - cowsay
     uninstalled:
         - cheese
