add update for cask

--- a/ansible/macos-homebrew/tasks/main.yml
+++ b/ansible/macos-homebrew/tasks/main.yml
@@ -5,14 +5,14 @@
 
 ### TAPS
 # Install taps
-- homebrew_tap: 
+- community.general.homebrew_tap.homebrew_tap: 
     name: "{{ item }}"
     state: present
   loop: "{{ query('list', mhf.tap.installed | default([]) ) }}" 
   when: mhf is defined  and item
 
 # Remove taps
-- homebrew_tap: 
+- community.general.homebrew_tap.homebrew_tap: 
     name: "{{ item }}"
     state: absent
   loop: "{{ query('list', mhf.tap.not_installed | default([]) ) }}" 
@@ -20,14 +20,15 @@
 
 ### BREWS
 # Install brews
-- homebrew: 
+- community.general.homebrew: 
     name: "{{ item }}"
     state: present
+    update_homebrew: true
   loop: "{{ query('list', mhf.brew.installed  | default([]) ) }}" 
   when: mhf is defined and item 
 
 # Remove brews
-- homebrew: 
+- community.general.homebrew: 
     name: "{{ item }}"
     state: absent
   loop: "{{ query('list', mhf.brew.not_installed  | default([]) ) }}" 
@@ -35,16 +36,15 @@
 
 ### BREW CASKS
 # Install brew_cask
-- homebrew_cask: 
+- community.general.homebrew_cask: 
     name: "{{ item }}"
     state: present
   loop: "{{ lookup('list', mhf.brew_cask.installed | default([]) ) }}" 
   when: mhf is defined
 
 # Remove brew-cask
-- homebrew_cask: 
+- community.general.homebrew_cask: 
     msg: "{{ item }}"
     state: absent
   loop: "{{ lookup('list', mhf.brew_cask.not_installed | default([]) ) }}" 
   when: mhf is defined
-
