--- a/ansible/docker-applications/tasks/main.yml
+++ b/ansible/docker-applications/tasks/main.yml
@@ -7,6 +7,7 @@
 # delete desktop entries
 - name: Delete all desktop files 
   shell: "rm -rf {{ local_home }}/Desktop/*.desktop"
+  become: true
 
 # # remove custom menu items
 - name: Delete all desktop files 
