--- a/ansible/macos-configure-os-settings/tasks/main.yml
+++ b/ansible/macos-configure-os-settings/tasks/main.yml
@@ -10,43 +10,67 @@
   
 # Add Dock Items Apps
 - name: Add in Dock to Persistent App section
-  shell: dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ item.pos }}' --section apps
-  with_items: "{{ ms.dock.persistent_apps | default({}) }}"  
-  when: item.type == 'app'
+  shell: |
+    dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ ansible_loop.index }}' --section apps
+    sleep 5
+  loop: "{{ ms.dock.persistent_apps|flatten(levels=1) }}"
+  loop_control:
+    index_var: index
+    extended: true
+    extended_allitems: false
+  when: ms.dock.persistent_apps is defined and item.type == 'app'
 
 # Add Dock Items Apps Folders
 - name: Add in Dock to Persistent App section folders
-  shell: dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ item.pos }}' --section apps --view '{{ item.folder_style }}' --display '{{ item.type }}' --sort '{{ item.folder_sort }}'
-  with_items: "{{ ms.dock.persistent_apps | default({}) }}"  
-  when: item.type != 'app'
+  shell: |
+    dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ ansible_loop.index }}' --section apps --view '{{ item.folder_style }}' --display '{{ item.type }}' --sort '{{ item.folder_sort }}'
+    sleep 5
+  loop: "{{ ms.dock.persistent_apps|flatten(levels=1) }}"
+  loop_control:
+    index_var: index
+    extended: true
+    extended_allitems: false
+  when: ms.dock.persistent_apps is defined and item.type == 'folder'
 
 # Add Dock Items Others
 - name: Add in Dock to Other app section 
-  shell: dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ item.pos }}' --section others
-  with_items: "{{ ms.dock.other_apps | default({}) }}"  
-  when: item.type == 'app'
+  shell: |
+    dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ ansible_loop.index }}' --section others
+    sleep 5
+  loop: "{{ ms.dock.other_apps | flatten(levels=1) }}"
+  loop_control:
+    index_var: index
+    extended: true
+    extended_allitems: false
+  when: ms.dock.other_apps is defined and item.type == 'app'
 
 # Add Dock Items Apps Folders
 - name: Add in Dock to Other App section folders
-  shell: dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ item.pos }}' --section others --view '{{ item.folder_style }}' --display '{{ item.type }}' --sort '{{ item.folder_sort }}'
-  with_items: "{{ ms.dock.other_apps | default({}) }}"  
-  when: item.type != 'app'
+  shell: |
+    dockutil --add '{{ item.path }}' --label '{{ item.name }}' --position '{{ ansible_loop.index }}' --section others --view '{{ item.folder_style }}' --display '{{ item.type }}' --sort '{{ item.folder_sort }}'
+    sleep 5
+  loop: "{{ ms.dock.other_apps | flatten(levels=1) }}"
+  loop_control:
+    index_var: index
+    extended: true
+    extended_allitems: false
+  when: ms.dock.other_apps is defined and item.type == 'folder'
 
 ## MACOS DEFAULTS TERMINAL PLIST SETTINGS
 # Delete defaults
-- osx_defaults: 
+- osx_defaults:
     domain: '{{ item.domain }}'
     key: '{{ item.key}}'
     state: absent
-  with_items: "{{ ms.osx_defaults | default({}) }}"  
+  with_items: "{{ ms.osx_defaults | default({}) }}"
   when: item.state == 'absent'
 
 # Modify (add,update) defaults
-- osx_defaults: 
+- osx_defaults:
     domain: '{{ item.domain }}'
     key: '{{ item.key }}'
-    type: '{{ item.type }}'    
-    value: '{{ item.value }}'    
+    type: '{{ item.type }}'
+    value: '{{ item.value }}'
     state: present
-  with_items: "{{ ms.osx_defaults | default({}) }}"  
+  with_items: "{{ ms.osx_defaults | default({}) }}"
   when: item.state == 'present'
