--- a/ansible/macos-configure-os-settings/tasks/main.yml
+++ b/ansible/macos-configure-os-settings/tasks/main.yml
@@ -4,9 +4,35 @@
     name: ms
 
 ## DOCK SETTINGS
-# Remove All Dock Items
-- name: Remove from Dock
+# Get current dock configuration
+- name: Get current dock items
+  shell: dockutil --list | awk -F'\t' '{print $1 "\t" $2}'
+  register: current_dock_items
+  changed_when: false
+  when: ms.dock is defined
+
+# Build expected dock configuration
+- name: Build expected dock configuration
+  set_fact:
+    expected_dock_items: "{{ (ms.dock.persistent_apps | default([]) + ms.dock.other_apps | default([])) | map(attribute='name') | list }}"
+  when: ms.dock is defined
+
+# Parse current dock items into a list
+- name: Parse current dock items
+  set_fact:
+    current_dock_names: "{{ current_dock_items.stdout_lines | map('regex_replace', '^(.*?)\\t.*$', '\\1') | list }}"
+  when: ms.dock is defined and current_dock_items.stdout_lines is defined
+
+# Check if dock needs to be reconfigured
+- name: Check if dock configuration has changed
+  set_fact:
+    dock_needs_update: "{{ (expected_dock_items | default([]) | sort) != (current_dock_names | default([]) | sort) or (current_dock_items.stdout_lines | length) != (expected_dock_items | default([]) | length) }}"
+  when: ms.dock is defined
+
+# Remove All Dock Items (only if changes needed)
+- name: Remove all items from Dock
   shell: dockutil --remove all 
+  when: ms.dock is defined and dock_needs_update | default(false) | bool
   
 # Add Dock Items Apps
 - name: Add in Dock to Persistent App section
@@ -18,7 +44,7 @@
     index_var: index
     extended: true
     extended_allitems: false
-  when: ms.dock.persistent_apps is defined and item.type == 'app'
+  when: ms.dock.persistent_apps is defined and item.type == 'app' and dock_needs_update | default(false) | bool
 
 # Add Dock Items Apps Folders
 - name: Add in Dock to Persistent App section folders
@@ -30,7 +56,7 @@
     index_var: index
     extended: true
     extended_allitems: false
-  when: ms.dock.persistent_apps is defined and item.type == 'folder'
+  when: ms.dock.persistent_apps is defined and item.type == 'folder' and dock_needs_update | default(false) | bool
 
 # Add Dock Items Others
 - name: Add in Dock to Other app section 
@@ -42,7 +68,7 @@
     index_var: index
     extended: true
     extended_allitems: false
-  when: ms.dock.other_apps is defined and item.type == 'app'
+  when: ms.dock.other_apps is defined and item.type == 'app' and dock_needs_update | default(false) | bool
 
 # Add Dock Items Apps Folders
 - name: Add in Dock to Other App section folders
@@ -54,7 +80,7 @@
     index_var: index
     extended: true
     extended_allitems: false
-  when: ms.dock.other_apps is defined and item.type == 'folder'
+  when: ms.dock.other_apps is defined and item.type == 'folder' and dock_needs_update | default(false) | bool
 
 ## MACOS DEFAULTS TERMINAL PLIST SETTINGS
 # Delete defaults
