--- a/ansible/custom-roles/tasks/main.yml
+++ b/ansible/custom-roles/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - include_vars:
     file: "{{ settings_home }}/{{ item.value.variable_file }}"
-  when: item.value.variable_file is defined
+  when: item.value.variable_file is defined and item.value.variable_file is not none
   loop: "{{ customroles_file.roles | dict2items }}"
 
 - name: Custom Roles
