--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -27,21 +27,21 @@
     # LINUX (includes WSL support)
     - include_role:
         name: linux-packages
-      when: ansible_system == 'Linux'
+      when: ansible_facts["system"] == 'Linux'
       vars:
         packages: "{{ wsl_packages_yaml if WSL_LINUX == 'TRUE' else linux_packages_yaml }}"
 
     # LINUX AND NOT WSL
-    - include_role: 
+    - include_role:
         name: linux-install-docker
-      when: ansible_system == 'Linux' and WSL_LINUX == 'FALSE'
+      when: ansible_facts["system"] == 'Linux' and WSL_LINUX == 'FALSE'
       vars:
-        non_root_user: "{{ ansible_user_id }}" 
+        non_root_user: "{{ ansible_facts['user_id'] }}"
 
-    # LINUX AND NOT WSL 
+    # LINUX AND NOT WSL
     - include_role:
         name: linux-gnome-desktop-settings
-      when: ansible_system == 'Linux' and WSL_LINUX == 'FALSE'
+      when: ansible_facts["system"] == 'Linux' and WSL_LINUX == 'FALSE'
       vars:
         gnomeSettings: "{{ linux_gnome_settings_yaml }}"
         desktop_dir: "{{ desktop_directory }}"
@@ -49,7 +49,7 @@
     # MAC (Darwin)
     - include_role:
         name: macos-homebrew
-      when: ansible_system == 'Darwin'
+      when: ansible_facts["system"] == 'Darwin'
       vars:
         macos_homebrew: "{{ macos_brew_yaml }}"
         desktop_dir: "{{ desktop_directory }}"
@@ -57,16 +57,16 @@
     # MAC (Darwin)
     - include_role:
         name: macos-configure-os-settings
-      when: ansible_system == 'Darwin'
+      when: ansible_facts["system"] == 'Darwin'
       vars:
         macos_settings: "{{ macos_configure_os_settings_yaml }}"
         desktop_dir: "{{ desktop_directory }}"
 
-    # MAC (Darwin) Requires Xquartz and socat 
+    # MAC (Darwin) Requires Xquartz and socat
     # OR WSL
     - include_role:
         name: docker-applications
-      when: ansible_system == 'Darwin' or WSL_LINUX == 'TRUE'
+      when: ansible_facts["system"] == 'Darwin' or WSL_LINUX == 'TRUE'
       vars:
         application_setup: "{{ docker_applications_yaml }}"
         desktop_dir: "{{ desktop_directory }}"
@@ -75,7 +75,7 @@
     # LINUX AND NOT WSL
     - include_role:
         name: docker-applications
-      when: ansible_system == 'Linux' and WSL_LINUX == 'FALSE'
+      when: ansible_facts["system"] == 'Linux' and WSL_LINUX == 'FALSE'
       vars:
         application_setup: "{{ linux_docker_applications_yaml }}"
         desktop_dir: "{{ desktop_directory }}"
