--- a/ansible/macos-configure-os-settings/tasks/main.yml
+++ b/ansible/macos-configure-os-settings/tasks/main.yml
@@ -4,9 +4,9 @@
     name: macos_settings_config
 
 ## DOCK SETTINGS
-# Get current dock configuration with positions
+# Get current dock configuration (excluding recentApps which macOS adds automatically)
 - name: Get current dock items
-  shell: dockutil --list | awk -F'\t' '{print $1}'
+  shell: dockutil --list | grep -v "recentApps" | awk -F'\t' '{print $1}'
   register: current_dock_items
   changed_when: false
   when: macos_settings_config.dock is defined
@@ -23,10 +23,10 @@
     current_dock_names: "{{ current_dock_items.stdout_lines | map('trim') | list }}"
   when: macos_settings_config.dock is defined and current_dock_items.stdout_lines is defined
 
-# Check if all expected items are in their correct positions
-- name: Check if expected items are in correct positions
+# Check if configured apps are in exact order at start of dock (ignore extra apps after)
+- name: Check if configured apps are in correct positions
   set_fact:
-    dock_needs_update: "{{ expected_dock_items | difference(current_dock_names[:expected_dock_items | length]) | length > 0 or expected_dock_items | length > current_dock_names | length }}"
+    dock_needs_update: "{{ expected_dock_items != (current_dock_names[:expected_dock_items | length] | list) }}"
   when: macos_settings_config.dock is defined
 
 # Debug dock configuration (optional - set macos_dock_debug: true to enable)
@@ -37,6 +37,7 @@
       - "Current items in expected positions ({{ current_dock_names[:expected_dock_items | length] | length }}): {{ current_dock_names[:expected_dock_items | length] }}"
       - "All current items ({{ current_dock_names | length }}): {{ current_dock_names }}"
       - "Needs update: {{ dock_needs_update | default(false) }}"
+      - "Differences: {{ expected_dock_items | zip(current_dock_names[:expected_dock_items | length]) | selectattr('0', 'ne', '1') | list }}"
   when: macos_settings_config.dock is defined and (macos_dock_debug | default(false) | bool)
 
 # Remove All Dock Items (only if changes needed)
