--- a/ansible/sample-desktop-setup/linux-gnome-settings.yml
+++ b/ansible/sample-desktop-setup/linux-gnome-settings.yml
@@ -1,18 +1,13 @@
 ---
-gnome_extensions:
-  dashtodock:
-    download_type: archive
-    extension_name: dash-to-dock@micxgx.gmail.com 
-    extension_url: https://extensions.gnome.org/extension-data/dash-to-dockmicxgx.gmail.com.v71.shell-extension.zip
 gnome:
+  autohide:
+    setting: /org/gnome/shell/extensions/dash-to-dock/autohide true
   desktop_icons:
     setting: /org/gnome/desktop/background/show-desktop-icons true
-  shell_extensions:
-    setting: /org/gnome/shell/enabled-extensions '["gTile@vibou","apps-menu@gnome-shell-extensions.gcampax.github.com","dash-to-dock@micxgx.gmail.com"]'
   dock_position:
     setting: /org/gnome/shell/extensions/dash-to-dock/dock-position "'BOTTOM'"
   show_trash:
-    setting: /org/gnome/shell/extensions/dash-to-dock/show-trash false
+    setting: /org/gnome/shell/extensions/dash-to-dock/show-trash true
   preferred_monitor:
     setting: /org/gnome/shell/extensions/dash-to-dock/preferred-monitor 0
   custom_theme_shrink:
@@ -40,12 +35,3 @@ gnome:
     setting: /org/gnome/desktop/sound/event-sounds false
   touchpad:
     setting: /org/gnome/desktop/peripherals/touchpad/tap-to-click true    
-gnome_background:
-    desktop_background:
-      type: background
-      background_url: http://1.bp.blogspot.com/_Dob8rJ0PLZI/TQGwb7IZPhI/AAAAAAAAACY/rHz0TMmE2ts/s1600/grayLinux1280.jpg
-    screensaver_background:
-      type: screensaver 
-      background_url: https://wallpapertag.com/wallpaper/full/f/1/2/776629-free-download-linux-desktop-backgrounds-1920x1080.jpg
-x11_config:
-  user_x11_config_files: true      
